deploy/infrastructure/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    # traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
  labels:
    app.kubernetes.io/name: minio
  name: minio-api
  namespace: minio
spec:
  ingressClassName: traefik
  rules:
  - host: minio-api.scottseo.tech
    http:
      paths:
      - backend:
          service:
            name: minio
            port:
              number: 9000 
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    # traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
  labels:
    app.kubernetes.io/name: minio
  name: minio-console
  namespace: minio
spec:
  ingressClassName: traefik
  rules:
  - host: minio.scottseo.tech
    http:
      paths:
      - backend:
          service:
            name: minio 
            port:
              number: 9001 
        path: /
        pathType: Prefix
